--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ num = "0.4"
 yare = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+libtest-mimic = "0.5"
+
+[[test]]
+name = "expressions"
+harness = false
